Fix: `TaskFeedComment` spacing

--- a/src/modules/dashboard/components/TaskFeed/TaskFeedComment.css
+++ b/src/modules/dashboard/components/TaskFeed/TaskFeedComment.css
@@ -1,6 +1,6 @@
 .comment {
   display: flex;
-  margin: var(--pad-huge) 0;
+  margin: 0 0 20px 0;
 }
 
 .commentSelf {
